# OMFMISimulator

./: CMakeLists.txt  Makefile  README.md  buildWinVS14.bat  configWinVS14.bat
doc/: Makefile  make.bat
doc/source/: OMFMISimulator.rst  OMFMISimulatorLib.rst  OMFMISimulatorLua.rst  conf.py  index.rst  introduction.rst
doc/source/api/: exportCompositeStructure.rst  exportDependencyGraph.rst  exportXML.rst  getBoolean.rst  getCurrentTime.rst  getInteger.rst  getReal.rst  importXML.rst  initialize.rst  instantiateFMU.rst  instantiateTable.rst  loadModel.rst  newModel.rst  reset.rst  setBoolean.rst  setCommunicationInterval.rst  setInteger.rst  setLogFile.rst  setReal.rst  setResultFile.rst  setSolverMethod.rst  setStartTime.rst  setStopTime.rst  setTempDirectory.rst  setTolerance.rst  setVariableFilter.rst  setWorkingDirectory.rst  simulate.rst  stepUntil.rst  terminate.rst  unload.rst
src/OMSimulator/: CMakeLists.txt  Options.cpp  Options.h  main.cpp
src/OMSimulatorLib/: CMakeLists.txt  CSVReader.cpp  CompositeModel.cpp  CompositeModel.h  Logging.cpp  Logging.h  MatReader.cpp  OMSimulator.cpp  OMSimulator.h  Variable.h
src/OMSimulatorLua/: CMakeLists.txt  OMSimulatorLua.c
src/OMSimulatorModelica/: CMakeLists.txt
src/OMSimulatorPython/: CMakeLists.txt  OMSimulator.py  OMSimulatorPython  OMSimulatorPython.bat
