project(OMSimulatorPython)

install(FILES OMSimulator.py DESTINATION ${CMAKE_SOURCE_DIR}/install/lib)
install(FILES OMSimulatorPython DESTINATION ${CMAKE_SOURCE_DIR}/install/bin PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ)
install(FILES OMSimulatorPython.bat DESTINATION ${CMAKE_SOURCE_DIR}/install/bin PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ)
